# Password-manager-cli

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  RELEASE.md
.github/workflows/: Release.yml  ci.yml  cmake-multi-platform.yml  cmake-single-platform.yml
include/: Account.h  CommandDispatcher.h  CommandParser.h  Console.h  Constants.h  PasswordManager.h  Security.h  SessionManager.h  Storage.h  Vault.h
include/cli/: Command.h  CommandDispatcher.h  CommandParser.h  Console.h
include/cli/modules/: HelpPrinter.h
include/core/: Account.h  AuthGuard.h  PasswordManager.h  SessionContext.h  Vault.h
include/exception/: CommandException.h  EncryptException.h  PasswordManagerException.h  StorageException.h
include/storage/: BinaryFormat.h  BinaryReader.h  BinaryStorage.h  BinaryWriter.h  Encryptor.h  Storage.h  VaultData.h
include/utils/: Constants.h  Encryptor.h  Security.h
src/: Account.cpp  AuthGuard.cpp  CommandDispatcher.cpp  CommandParser.cpp  Console.cpp  Encryptor.cpp  PasswordManager.cpp  Security.cpp  Sercurity.cpp  SessionManager.cpp  Storage.cpp  Vault.cpp  main.cpp
src/cli/: CommandDispatcher.cpp  CommandParser.cpp  Console.cpp
src/cli/modules/: HelpPrinter.cpp
src/core/: Account.cpp  AuthGuard.cpp  PasswordManager.cpp  SessionContext.cpp  SessionManager.cpp  Vault.cpp
src/storage/: BinaryReader.cpp  BinaryStorage.cpp  BinaryWriter.cpp  Encryptor.cpp  Storage.cpp
src/utils/: Encryptor.cpp  Security.cpp
